plugins {
	id 'application'
	id 'org.springframework.boot' version "${springBootVersion}"
}
apply plugin: 'io.spring.dependency-management'

application {
    mainClassName = 'registry.ServiceRegistryApplication'
}

applicationDefaultJvmArgs = ["--enable-preview"]

sourceCompatibility = 17
targetCompatibility = 17

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}
dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
}
